--- a/qn1/Meridian.plist
+++ b/qn1/Meridian.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=TZDDX]]></string>
+               <string><![CDATA[http://152.136.120.155/tz/lz.php?url=https://www.lanzous.com/i7t0v9g&type=down]]></string>
              </dict>
              <dict>
                <key>kind</key>
