--- a/qn1/Chimera.plist
+++ b/qn1/Chimera.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=FYSZW]]></string>
+               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=V3TAC]]></string>
              </dict>
              <dict>
                <key>kind</key>
