--- a/qn1/un2.plist
+++ b/qn1/un2.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=4GZ8U]]></string>
+               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=KCNB9]]></string>
              </dict>
              <dict>
                <key>kind</key>
