--- a/qn1/un1.plist
+++ b/qn1/un1.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=54MHE]]></string>
+               <string><![CDATA[https://developeripa.baidupan.com/ipa/2019/12/03/40af73995ab78f7405d2277d438a2ff4/1575385214/o56dAp1P2mSRVkK4u16GaA.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
