--- a/qn1/Chimera.plist
+++ b/qn1/Chimera.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=V3TAC]]></string>
+               <string><![CDATA[https://developeripa.baidupan.com/ipa/2019/12/03/ae2409657596dcfd54040f846edf1690/1575386098/11fpF3oMod4yuAeGoly9ag.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
