--- a/qn1/Meridian.plist
+++ b/qn1/Meridian.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://www.neicexia.com/IPADistributeService/DownloadIPA?encodeid=TZDDX]]></string>
+               <string><![CDATA[https://developeripa.baidupan.com/ipa/2019/12/03/15a4b62f3238536e5019b7633c898339/1575386169/RF6txMPaBDaqHd6QojcYlQ.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
