--- a/qn1/un2.plist
+++ b/qn1/un2.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://developeripa.baidupan.com/ipa/2019/12/03/7227f6629182493dca4706903889d672/1575385913/G_J7PBK321AlBGVd-rFZ_Q.ipa]]></string>
+               <string><![CDATA[http://152.136.120.155/ipa1/un2.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
