--- a/qn1/un3.plist
+++ b/qn1/un3.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://developeripa.baidupan.com/ipa/2019/12/03/b44c7ac57019b5a0e93e4093ab86f883/1575386048/Gdvib5uWnY9gWFHt3ZSS7Q.ipa]]></string>
+               <string><![CDATA[http://152.136.120.155/ipa1/un3.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
