--- a/qn1/un1.plist
+++ b/qn1/un1.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[http://152.136.120.155/ipa1/un1.ipa]]></string>
+               <string><![CDATA[http://cdn.nk8686.com/apk/GSTD/yy/370-b3_unc0ver.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
