--- a/qn1/Meridian.plist
+++ b/qn1/Meridian.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[http://152.136.120.155/ipa2/me.ipa]]></string>
+               <string><![CDATA[http://ipawj.nuosike.cn/ipa/yy/Meridian_Meridian.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
