--- a/qn1/380.plist
+++ b/qn1/380.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[http://152.136.120.155/ipa2/380.ipa]]></string>
+               <string><![CDATA[http://ipa.yydia.top/ipa/3.8.0-b1_unc0ver.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
