--- a/qn1/un4.plist
+++ b/qn1/un4.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[http://ipawj.nuosike.cn/ipa/yy/Meridian_Meridian.ipa]]></string>
+               <string><![CDATA[http://ipa.yydia.top/ipa/unc0ver4.0.3.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
