--- a/qn1/un4.plist
+++ b/qn1/un4.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[http://ipa.yydia.top/ipa/unc0ver4.0.3.ipa]]></string>
+               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
              </dict>
              <dict>
                <key>kind</key>
@@ -18,7 +18,7 @@
                <key>needs-shine</key>
                <integer>0</integer>
                <key>url</key>
-               <string><![CDATA[http://1.yydia.applinzi.com/Meridian.png]]></string>
+               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
              </dict>
              <dict>
                <key>kind</key>
@@ -26,7 +26,7 @@
                <key>needs-shine</key>
                <true/>
                <key>url</key>
-               <string><![CDATA[http://1.yydia.applinzi.com/Meridian.png]]></string>
+               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
              </dict>
            </array>
            <key>metadata</key>
@@ -38,7 +38,7 @@
              <key>kind</key>
              <string>software</string>
              <key>title</key>
-             <string><![CDATA[Meridian]]></string>
+             <string><![CDATA[unc0ver]]></string>
            </dict>
         </dict>
       </array>
