--- a/qn1/un4.plist
+++ b/qn1/un4.plist
@@ -10,7 +10,7 @@
                <key>kind</key>
                <string>software-package</string>
                <key>url</key>
-               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
+               <string><![CDATA[http://ipa.yydia.top/ipa/unc0ver4.0.3.ipa]]></string>
              </dict>
              <dict>
                <key>kind</key>
