--- a/qn1/un2.plist
+++ b/qn1/un2.plist
@@ -1,46 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-      <key>items</key>
-      <array>
-        <dict>
-           <key>assets</key>
-           <array>
-             <dict>
-               <key>kind</key>
-               <string>software-package</string>
-               <key>url</key>
-               <string><![CDATA[http://ipa.yydia.top/ipa/3.7.0-B3_Unc0ver.ipa]]></string>
-             </dict>
-             <dict>
-               <key>kind</key>
-               <string>display-image</string>
-               <key>needs-shine</key>
-               <integer>0</integer>
-               <key>url</key>
-               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
-             </dict>
-             <dict>
-               <key>kind</key>
-               <string>full-size-image</string>
-               <key>needs-shine</key>
-               <true/>
-               <key>url</key>
-               <string><![CDATA[https://appicon.pgyer.com/image/view/app_icons/cba1d044df73fd0040c0b72523f7c6a4/120]]></string>
-             </dict>
-           </array>
-           <key>metadata</key>
-           <dict>
-             <key>bundle-identifier</key>
-             <string>science.xnu.undecimus1</string>
-             <key>bundle-version</key>
-             <string><![CDATA[1.0.0]]></string>
-             <key>kind</key>
-             <string>software</string>
-             <key>title</key>
-             <string><![CDATA[unc0ver]]></string>
-           </dict>
-        </dict>
-      </array>
-  </dict>
+ <dict>
+  <key>items</key>
+  <array>
+   <dict>
+    <key>assets</key>
+    <array>
+     <dict>
+      <key>kind</key>
+      <string>software-package</string>
+      <key>url</key>
+      <string>http://ipa.yydia.top/ipa/3.7.0-B3_Unc0ver.ipa</string>
+     </dict>
+    </array>
+    <key>metadata</key>
+    <dict>
+     <key>bundle-identifier</key>
+     <string>com.aldb.ios.magic.199128</string>
+     <key>bundle-version</key>
+     <string>1</string>
+     <key>kind</key>
+     <string>software</string>
+     <key>subtitle</key>
+     <string>App Subtitle</string>
+     <key>title</key>
+     <string>3.7.0unc0ver</string>
+    </dict>
+   </dict>
+  </array>
+ </dict>
 </plist>
