--- a/qn1/430.plist
+++ b/qn1/430.plist
@@ -11,7 +11,7 @@
       <key>kind</key>
       <string>software-package</string>
       <key>url</key>
-      <string>http://ipa.yydia.top/ipa/appcake.ipa</string>
+      <string>http://yydia.applinzi.com/ipa/430.ipa</string>
      </dict>
     </array>
     <key>metadata</key>
@@ -25,7 +25,7 @@
      <key>subtitle</key>
      <string>App Subtitle</string>
      <key>title</key>
-     <string>appcake</string>
+     <string>unc0ver431</string>
     </dict>
    </dict>
   </array>
