--- a/qn1/380.plist
+++ b/qn1/380.plist
@@ -11,7 +11,7 @@
       <key>kind</key>
       <string>software-package</string>
       <key>url</key>
-      <string>http://ipa.yydia.top/ipa/3.8.0-b1_unc0ver.ipa</string>
+      <string>http://yydia.applinzi.com/ipa/380.ipa</string>
      </dict>
     </array>
     <key>metadata</key>
