--- a/qn1/363.plist
+++ b/qn1/363.plist
@@ -11,7 +11,7 @@
       <key>kind</key>
       <string>software-package</string>
       <key>url</key>
-      <string>http://ipa.yydia.top/ipa/3.6.3_unc0ver.ipa</string>
+      <string>http://yydia.applinzi.com/ipa/363.ipa</string>
      </dict>
     </array>
     <key>metadata</key>
