--- a/qn1/ch.plist
+++ b/qn1/ch.plist
@@ -11,7 +11,7 @@
       <key>kind</key>
       <string>software-package</string>
       <key>url</key>
-      <string>http://ipa.yydia.top/ipa/139_Chimera.ipa</string>
+      <string>http://yydia.applinzi.com/ipa/ch.ipa</string>
      </dict>
     </array>
     <key>metadata</key>
